--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
 <head>
 	<title>403 Forbidden</title>
+	<script type="text/javascript">
+	window.location = "aplication/controllers/cLogin.php";
+</script>
 </head>
 <body>
 
-<p>Directory access is forbidden.</p>
+
 
 </body>
 </html>
