--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <head>
 	<title>403 Forbidden</title>
 	<script type="text/javascript">
-	window.location = "aplication/controllers/cLogin.php";
+		function(){
+		window.location = "aplication/controllers/compras.php";	
+		}
+	
 </script>
 </head>
 <body>
 
+	<button id="close-btn" type="button" onclick="iraCompras();" >IR</button>
 
 
 </body>
