--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>403 Forbidden</title>
 	<script type="text/javascript">
-		function(){
+		function iraCompras(){
 		window.location = "aplication/controllers/compras.php";	
 		}
 	
